[package]
name = "dhartitri-chain-vm-executor-wasmer"
version = "0.0.1"
edition = "2021"
publish = false # will also be published, but it is not yet ready for that

[lib]

[dependencies]
dhartitri-chain-vm-executor = { path = "../vm-executor" }

wasmer = { git = "https://github.com/multiversx/wasmer", rev = "cdd1550", default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }

wasmer-vm = { git = "https://github.com/multiversx/wasmer", rev = "cdd1550" }
wasmer-types = { git = "https://github.com/multiversx/wasmer", rev = "cdd1550" }

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
