[package]
name = "dharitri-chain-vm-executor"
version = "0.1.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dhartitri.com>",
    "Ovidiu Stinga <ovidiu.stinga@dhartitri.com>",
    "Dhartitri <contact@dhartitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dhartitri/mx-vm-executor-rs"
homepage = "https://dhartitri.com/"
documentation = "https://docs.dhartitri.com/"
description = "Dhartitri VM executor interface"
keywords = ["dhartitri", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies]
enumset = "1.0"
cfg-if = "1.0"
lazy_static = "1.4"
libc = { version = "^0.2", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"
typetag = { version = "0.1", optional = true }
paste = "1.0"
anyhow = "1.0"
env_logger = "0.8.4"
log = "0.4.14"
